new layered structure